--- a/style.css
+++ b/style.css
@@ -1,64 +1,344 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 * {
-    font-family: 'Montserrat', 'sans-serif';
+  font-family: "Montserrat", "sans-serif";
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: #0E0428;
-    overflow: hidden;
-    color: #A9B7C6;
+  background-color: #0e0428;
+  color: #a9b7c6;
+  margin: 2rem;
 }
 
-.container {
-    display: flex;
-    margin-top: 10%;
-    justify-content: center;
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #c58b5b;
+  border-radius: 3px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #cc7832;
 }
 
-.container p {
-    font-size: 3rem;
-    letter-spacing: 0.1rem;
-    text-align: center;
-    padding: 0.5rem;
+.title-normal {
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+  color: #cc7832;
 }
 
-.button {
-    text-align: center;
-    font-size: 1.5rem;
-    background-color: transparent;
-    color: #A9B7C6;
-    border: 2px solid #CC7832;
-    padding: 15px 100px 15px 100px;
-    border-radius: 4px;
-    transition-duration: 0.4s;
-}
-.button:hover {
-    background-color: #CC7832;
-    color: white;
+.title-center {
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  color: #cc7832;
 }
 
-.typed-text {
-    font-weight: bold;
-    color: #CC7832;
+.languagediv {
+  height: 35px;
 }
 
-.cursor {
-    display: inline-block;
-    width: 3px;
-    background-color: #A9B7C6;
-    margin-left: 0.1rem;
-    animation: blink 1s infinite;
+.language {
+  height: auto;
+  display: flex;
+  flex: 0 0 auto;
+  float: right;
 }
 
-.cursor.typing {
-    animation: none;
+.language span {
+  position: relative;
+  display: inline-block;
+  margin-top: 5px;
+  vertical-align: middle;
+}
+
+.check {
+  position: relative;
+  width: 50px;
+  height: 25px;
+}
+
+.check::before {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 25px;
+  background-color: #333;
+  border-radius: 25px;
+  transition: 0.25s;
+}
+
+.check:checked::before {
+  background: #cc7832;
+}
+
+.check::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  width: 25px;
+  height: 25px;
+  background-color: #333;
+  border-radius: 25px;
+  transition: 0.25s;
+  border: 2px solid #cc7832;
+  box-sizing: border-box;
+}
+
+.check:checked::after {
+  left: 25px;
+  border: 2px solid #333;
+  background: #cc7832;
+}
+
+.start {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.start p {
+  font-size: 3rem;
+  letter-spacing: 0.1rem;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+#start-spanish {
+  display: none;
+}
+
+#start-spanish::before {
+  display: flex;
+}
+
+.typed-text-en,
+.typed-text-es {
+  font-weight: bold;
+  color: #cc7832;
+}
+
+.cursor-en,
+.cursor-es {
+  display: inline-block;
+  width: 3px;
+  background-color: #a9b7c6;
+  margin-left: 0.1rem;
+  animation: blink 1s infinite;
+}
+
+.cursor-en.typing,
+.cursor-es.typing {
+  animation: none;
 }
 
 @keyframes blink {
-    0% { background-color: #A9B7C6; }
-    49% { background-color: #A9B7C6; }
-    50% { background-color: transparent; }
-    99% { background-color: transparent; }
-    100% { background-color: #A9B7C6; }
+  0% {
+    background-color: #a9b7c6;
+  }
+  49% {
+    background-color: #a9b7c6;
+  }
+  50% {
+    background-color: transparent;
+  }
+  99% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #a9b7c6;
+  }
+}
+
+.table-of-contents {
+  max-width: 500px;
+  line-height: 2;
+}
+
+.table-content {
+  border: 2px solid #a9b7c6;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.column {
+  float: left;
+  width: 333px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.intro img {
+  position: relative;
+  margin-right: 2rem;
+  height: 300px;
+  border-radius: 5%;
+  box-shadow: 4px 4px 10px #333333;
+}
+
+a:link,
+a:visited {
+  color: #a9b7c6;
+  text-decoration: none;
+}
+
+.timeline {
+  position: relative;
+  max-width: 1500px;
+  color: #0e0428;
+  margin: 0 auto;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: #a9b7c6;
+  border-radius: 2px;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+.container::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #ff9f55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  left: 50%;
+}
+
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid #ff9f55;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #ff9f55;
+}
+
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #ff9f55;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #ff9f55 transparent transparent;
+}
+
+.right::after {
+  left: -16px;
+}
+
+.content {
+  padding: 1px 25px;
+  background-color: #a9b7c6;
+  color: #0e0428;
+  position: relative;
+  border-radius: 4px;
+  line-height: 1.3;
+  text-align: justify;
+}
+
+.content-full {
+  padding: 25px 25px;
+  background-color: #a9b7c6;
+  color: #0e0428;
+  position: relative;
+  border-radius: 4px;
+  line-height: 1.3;
+  text-align: justify;
+  max-width: 1500px;
+  margin: 0 auto;
+}
+
+.content a {
+  color: #0e0428;
+}
+
+.content-full a {
+  color: #0e0428;
+}
+
+@media screen and (max-width: 700px) {
+
+  body {
+    margin: 1rem;
+  }
+
+  .start p {
+    font-size: 2rem;
+  }
+
+  .language {
+    text-align: center;
+  }
+
+  .timeline::after {
+    left: 31px;
+  }
+
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  .container::before {
+    left: 60px;
+    border: medium solid #a9b7c6;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #a9b7c6 transparent transparent;
+  }
+
+  .left::after,
+  .right::after {
+    left: 15px;
+  }
+
+  .right {
+    left: 0%;
+  }
 }
